[gd_scene load_steps=6 format=3 uid="uid://ccl3ibilv02qo"]

[ext_resource type="Script" uid="uid://s3fws28gfwjl" path="res://guns/enemy_gun/enemy_bullet.gd" id="1_hw4cv"]
[ext_resource type="Texture2D" uid="uid://d1mfrq838sh8q" path="res://icon.svg" id="2_boq8m"]
[ext_resource type="PackedScene" uid="uid://bje4s5b71rnj7" path="res://components/hurtbox_component.tscn" id="3_lnt6e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qncsx"]
size = Vector2(13, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yjkw"]
size = Vector2(12, 12)

[node name="enemyBullet" type="CharacterBody2D"]
script = ExtResource("1_hw4cv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_boq8m")

[node name="hurtboxComponent" parent="." instance=ExtResource("3_lnt6e")]
collision_mask = 1
attack_damage = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtboxComponent"]
shape = SubResource("RectangleShape2D_qncsx")

[node name="collision_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_checker"]
shape = SubResource("RectangleShape2D_6yjkw")

[connection signal="area_entered" from="hurtboxComponent" to="." method="_on_hurtbox_component_area_entered"]
[connection signal="area_entered" from="collision_checker" to="." method="_on_collision_checker_area_entered"]
